fixing layout for procedures on mobile/desktop

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -564,6 +564,7 @@ table.narrowtable tr:nth-child(5) {
 
 table.widetable {
   width: 100%;
+
 }
 
 table.widetable tr td:nth-child(1) {
@@ -575,20 +576,6 @@ table.widetable tr td:nth-child(2) {
 }
 
 
-table.widetable-process {
-  width: 100%;
-}
-
-table.narrowtable-process tr td,
-table.narrowtable-process tr th {
-  border: none;
-  padding: 15px 0 0;
-}
-
-
-table.widetable-process tr td:nth-child(3) {
-  text-align: right;
-}
 
 table.narrowtable-yourtasks tr td,
 table.narrowtable-yourtasks tr th {
